# srh-stat-and-ml-exam

./: .gitignore  README.md  pyproject.toml
data/processed/supervised/: diabetes_next_glucose_supervised.parquet
data/processed/supervised/samples/: test.parquet  train.parquet  val.parquet
data/processed/unsupervised/: diabetes_daily_features.parquet
docs/data-contracts/supervised-learning/: diabetes-event-window-features.md
docs/data-contracts/unsupervised-learning/: diabetes-daily-features.md
notebooks/: raw_data_to_samples.ipynb  raw_data_to_unsupervised_samples.ipynb  supervised_learning.ipynb  unsupervised_clustering.ipynb  unsupervised_learning.ipynb
