[project]
name = "srh-stat-and-ml-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "llvmlite>=0.42",
    "matplotlib>=3.10.8",
    "numba>=0.59",
    "numpy>=2.3.5",
    "pandas==2.3.3",
    "pandas-stubs~=3.0.0",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.11",
]
